# kart_medulla

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SERIAL_PROTOCOL.md  TODO.md  controller_gui.py  monitor_serial.py  platformio.ini  sdkconfig.esp32-s3-devkitc-1  stuff.md
.agents/: adding_messages.md  error_log.md
bluepill-angle-arduino/: platformio.ini
bluepill-angle-arduino/src/: main.cpp
components/KM_PID/: CMakeLists.txt  KM_PID.c
components/KM_RTOS/: CMakeLists.txt  KM_RTOS.c  KM_RTOS.h
components/as5600_sensor/: CMakeLists.txt
components/km_act/: CMakeLists.txt  km_act.c  km_act.h
components/km_cdir/: CMakeLists.txt
components/km_coms/: CMakeLists.txt  km_coms.c  km_coms.h
components/km_debug_led/: CMakeLists.txt  km_debug_led.c  km_debug_led.h
components/km_dsen/: CMakeLists.txt
components/km_gamc/: CMakeLists.txt  km_gamc.c  km_gamc.h
components/km_gpio/: km_gpio.c  km_gpio.h
components/km_objects/: km_objects.c  km_objects.h
components/km_pid/: CMakeLists.txt  km_pid.c  km_pid.h
esp32_code/: sdkconfig.esp32dev
main/: CMakeLists.txt  main.c  main_backup.c  main_normal.c  main_test_a.c  main_test_b.c  main_test_c.c  main_test_d.c  sketch.cpp  test_main.c
src/: main.cpp  sine_wave_test.cpp  sine_wave_test.h  steering_test.cpp  steering_test.h  steering_test_sequence.cpp  steering_test_sequence.h
stuff/: ARDUINO_IDE_PS5_SETUP.md  BLUEPAD32_UBUNTU_SETUP.md  NEXT_STEPS_OLD.md  PLATFORMIO_BLUEPAD32_UBUNTU.md  QUICK_START_VSCODE_PLATFORMIO.md  ps5_bluetooth_attempts.md
test/fakes/: nvs.h  (+6 more)
tools/: pio_esptool_patch.py
(+37 files in other folders)
